Fix login connectivity between frontend and backend